# keiba-ai

./: .gitattributes  .gitignore  README.md  config.yaml  keiba.py  pyproject.toml  requirements.txt  run-auto.bat
.github/workflows/: backfill.yml  collect.yml  predict.yml
data/: dataset.jsonl
models/: win_model.meta.json  win_model.txt
predictions/: 2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md  ledger.jsonl  record.md
src/keiba_ai/: __init__.py  betting.py  cli.py  dataset.py  ev.py  features.py  gemini_client.py  grading.py  ml.py  model.py  models.py  odds.py  parser.py  raceid.py  report.py  result.py  schedule.py  scraper.py  train.py
tests/: test_smoke.py
